--- a/templates/settings/inventory/modals/create_product_line.html
+++ b/templates/settings/inventory/modals/create_product_line.html
@@ -1,3 +1,4 @@
+
 <style>
   #modal_form form label {
     color: white;
@@ -19,6 +20,7 @@
         cancel
       </button>
       <button 
+        _="on click add .hidden to modal_div"
         class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
         font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-800 
         dark:focus:ring-blue-800 my-3" type="submit">
@@ -26,4 +28,3 @@
       </button>
     </div>
   </form>
-</div>
