--- a/templates/settings/inventory/tables/product_line_table.html
+++ b/templates/settings/inventory/tables/product_line_table.html
@@ -16,8 +16,20 @@
       <td class="px-3 py-4 text-base">{{ product_line.product.name }} ({{ product_line.values }})</td>
       <td class="px-3 py-4 text-base">{{ product_line.product.sub_category }}</td>
       <td class="px-3 py-4 text-base">{{ product_line.price }}</td>
-      <td class="px-3 py-4 text-base">{{ product_line.stock_qty }}</td>
-      <td class="px-3 py-4 text-base">{{ product_line.min_stock_qty }}</td>
+      <td class="px-3 py-4 text-base">
+        {% if product_line.product.is_countable %}
+        {{ product_line.stock_qty }}
+        {% else %}
+        <i class="fa-solid fa-infinity"></i>
+        {% endif %}
+      </td>
+      <td class="px-3 py-4 text-base">
+        {% if product_line.product.is_countable %}
+        {{ product_line.min_stock_qty }}
+        {% else %}
+        <i class="fa-solid fa-infinity"></i>
+        {% endif %}
+      </td>
       <td class="px-3 py-4 text-base">
         {% if product_line.is_active %}
         <span class="bg-red-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-green-600 dark:text-gray-100">Active</span>
