--- a/templates/base.html
+++ b/templates/base.html
@@ -110,6 +110,24 @@
       </aside>
     {% endif %}
     <div id="settings_content" class="max-h-full">
+      {% for message in messages %}
+      <div class="fixed top-16 right-0 w-1/4">
+        <div id="alert-2" class="flex items-center p-4 mb-4 text-red-800 rounded-lg rounded-t-none 
+          bg-red-50 dark:bg-gray-800 dark:text-red-400 border-t-4 border-red-500" role="alert">
+          <div class="ms-3 text-sm font-medium">
+            {{ message }}
+          </div>
+          <button 
+            type="button" 
+            _="on click add .hidden to #alert-2"
+            class="ms-auto -mx-1.5 -my-1.5 bg-red-50 text-red-500 rounded-lg 
+            focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex
+            items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-red-400 dark:hover:bg-gray-700" >
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+        </div>
+      </div>
+      {% endfor %}
     {% block content %}
     {% endblock content %}
     </div>
