--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -19,6 +19,7 @@
     </a>
   </li>
   {% endif %}
+  {% if perms.orders %} 
   <li class="item">
     <a
       hx-get="{% url "inventory" %}"
@@ -34,6 +35,7 @@
         <span class="ms-5 text-gray-300 text-lg">Inventory</span>
     </a>
   </li>
+  {% endif %}
 {% endblock sidecontent %}
 
 {% block content %} 
