add the attribute, product_line temps permissions

--- a/templates/settings/inventory/tabs/attributes.html
+++ b/templates/settings/inventory/tabs/attributes.html
@@ -28,6 +28,7 @@
           <p class="text-white text-lg m-2"> Attributes </p>
         </div>
         <div class="flex justify-center my-2">
+          {% if perms.orders.add_product %}
           <button 
             hx-get="{% url 'create_attribute' %}"
             hx-target="#modal_form"
@@ -38,6 +39,7 @@
             dark:focus:ring-blue-800" type="button">
             Add
           </button>
+          {% endif %}
         </div>
         <div
           class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg" style="height: 30rem">
@@ -50,6 +52,7 @@
           <p class="text-white text-lg m-2"> Products </p>
         </div>
         <div class="flex justify-center my-2">
+          {% if perms.orders.add_product %}
           <button 
             hx-get="{% url 'create_product' %}"
             hx-target="#modal_form"
@@ -60,6 +63,7 @@
             dark:focus:ring-blue-800" type="button">
             Add
           </button>
+          {% endif %}
         </div>
         <div
           class="relative overflow-x-auto shadow-lg m-5 sm:rounded-lg" style="height: 30rem">
