--- a/templates/settings/inventory/tables/product_line_table.html
+++ b/templates/settings/inventory/tables/product_line_table.html
@@ -7,7 +7,9 @@
       <th scope="col" class="px-3 py-3">Stock</th>
       <th scope="col" class="px-3 py-3">Low Stock</th>
       <th scope="col" class="px-3 py-3">Active</th>
+      {% if perms.orders.change_product %}
       <th scope="col" class="px-3 py-3">Action</th>
+      {% endif %}
     </tr>
   </thead>
   <tbody>
@@ -37,6 +39,7 @@
         <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-red-700 dark:text-gray-100">Inactive</span>
         {% endif %}
       </td>
+      {% if perms.orders.change_product %}
       <td class="px-3 py-4 text-base">
         <div class="flex gap-5">
           <a 
@@ -55,6 +58,7 @@
           </a>
         </div>
       </td>
+      {% endif %}
     </tr>
     {% endfor %}
   </tbody>
