--- a/templates/settings/inventory/tables/product_line_table.html
+++ b/templates/settings/inventory/tables/product_line_table.html
@@ -17,7 +17,7 @@
     <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
       <td class="px-3 py-4 text-base">{{ product_line.product.name }} ({{ product_line.values }})</td>
       <td class="px-3 py-4 text-base">{{ product_line.product.sub_category }}</td>
-      <td class="px-3 py-4 text-base">{{ product_line.price }}</td>
+      <td class="px-3 py-4 text-base">{{ product_line.normal_price }}</td>
       <td class="px-3 py-4 text-base">
         {% if product_line.product.is_countable %}
         {{ product_line.stock_qty }}
