add the category_list to the cashier sidebar

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
                 </ul>
               </li>
             </ul>
-            <ul class="space-y-2 font-medium ul_items">
+            <ul class="space-y-2 font-medium ul_items" style="overflow-y: auto; max-height: 55%">
               {% block sidecontent %}
               {% endblock sidecontent %}
             </ul>
