--- a/static/src/output.css
+++ b/static/src/output.css
@@ -1400,6 +1400,10 @@ input:checked + .toggle-bg {
   height: 100vh;
 }
 
+.h-96 {
+  height: 24rem;
+}
+
 .max-h-\[32rem\] {
   max-height: 32rem;
 }
@@ -1478,6 +1482,10 @@ input:checked + .toggle-bg {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .min-w-min {
