--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -29,8 +29,8 @@
       <div class="col-span-3 h-full bg-gray-800 rounded-tl-lg py-2 px-5">
         <div class="flex justify-center "> 
           <div class="flex items-center gap-1 mr-auto">
-            <input type="text" id="customer_id" 
-            class="border text-sm rounded-lg block w-24 mt-1.5 p-2.5 dark:bg-gray-700 dark:border-gray-600
+            <input type="number" aria-describedby="helper-text-explanation" id="customer_id" 
+            class="border text-sm rounded-lg block w-28 mt-1.5 p-2.5 dark:bg-gray-700 dark:border-gray-600
             dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             placeholder="Customer ID" required />
             <button data-tooltip-target="tooltip-right" data-tooltip-placement="right">
@@ -42,7 +42,7 @@
               text-white rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-500">
               <p> - Write the Customer ID </p>
               <p> - press "Enter" from the keyboard </p>
-              <p> - If the user is exist the next form will be filled with the user data </p>
+              <p> - If the user is exist the next form will be filled with the customer data </p>
               <div class="tooltip-arrow" data-popper-arrow></div>
             </div>
           </div>
@@ -56,8 +56,8 @@
       </div>
       <div class="flex h-full bg-gray-800 justify-center gap-1 items-center rounded-tr-lg p-10">
         <div>
-          <input type="text" id="order_id" 
-          class="border text-sm rounded-lg block w-24 p-2.5 dark:bg-gray-700 dark:border-gray-600
+          <input type="number" aria-describedby="helper-text-explanation" id="order_id" 
+          class="border text-sm rounded-lg block w-28 p-2.5 dark:bg-gray-700 dark:border-gray-600
           dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           placeholder="Order ID" required />
         </div>
@@ -79,7 +79,14 @@
     <!--Order Section-->
     <div class="grid grid-cols-4 gap-3 mt-3" style="height: 35rem">
       <!--Products list-->
-      <div class=" bg-gray-800 rounded-bl-lg"> </div>
+      <div class=" bg-gray-800 rounded-bl-lg overflow-y-auto h-full">
+        <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0">
+          <p> Products List </p>
+        </div>
+        <div id="product_list">
+        </div>
+        
+      </div>
 
       <!--Order Details-->
       <div class="col-span-3">
@@ -99,6 +106,8 @@
     {% if category.is_active %}
     <li class="item">
     <a
+      hx-get="{% url 'product_list' category.id %}"
+      hx-target="#product_list"
       _="on click remove .bg-gray-700 from <a/> in .ul_items then add .bg-gray-700 to me"
       class="flex items-top p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 
       dark:hover:bg-gray-700 group cursor-pointer max-h-full">
