--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -83,7 +83,8 @@
         <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0">
           <p> Products List </p>
         </div>
-        <div id="product_list">
+        <div id="product_list"
+        class="p-2">
         </div>
         
       </div>
