--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -81,10 +81,9 @@
       <!--Products list-->
       <div class=" bg-gray-800 rounded-bl-lg overflow-y-auto h-full">
         <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0">
-          <p> Products List </p>
+          <p class="text-lg border-b"> Products List </p>
         </div>
-        <div id="product_list"
-        class="p-2">
+        <div id="product_list" class="pt-2">
         </div>
         
       </div>
