--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -91,7 +91,9 @@
       <!--Order Details-->
       <div class="col-span-3">
         <div class="grid grid-rows-7 h-full gap-y-3">
-          <div class="row-span-4 bg-gray-800 h-full"></div>
+          <div class="row-span-4 bg-gray-800 h-full">
+            {% include 'cashier/tables/order_details_table.html' %}
+          </div>
           <div class="row-span-2 bg-gray-800 h-full"></div>
           <div class="row-span-1 bg-gray-800 h-full rounded-br-lg"></div>
         </div>
