--- a/templates/cashier/tables/product_list.html
+++ b/templates/cashier/tables/product_list.html
@@ -17,6 +17,10 @@
       {% for product, product_lines in products.items %}
         {% for product_line in product_lines %}
           <tr 
+            hx-get="{% url 'order_detail_row' product_line.id %}"
+            hx-target="#table_body"
+            hx-swap="beforeend"
+            hx-trigger="click delay:1s"
             class="text-lg text-gray-300 odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800
             dark:hover:bg-gray-600 cursor-pointer">
             <td class="px-3 py-3 ">
