--- a/static/src/output.css
+++ b/static/src/output.css
@@ -2139,6 +2139,10 @@ input:checked + .toggle-bg {
   text-transform: uppercase;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
@@ -2758,6 +2762,14 @@ input:checked + .toggle-bg {
   .dark\:hover\:bg-red-800:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(155 28 28 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:bg-opacity-5:hover {
+    --tw-bg-opacity: 0.05;
+  }
+
+  .dark\:hover\:font-bold:hover {
+    font-weight: 700;
   }
 
   .dark\:hover\:text-blue-500:hover {
