--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -91,11 +91,76 @@
       <!--Order Details-->
       <div class="col-span-3">
         <div class="grid grid-rows-7 h-full gap-y-3">
+          <!--Order Details Table-->
           <div class="row-span-4 bg-gray-800 h-full">
             {% include 'cashier/tables/order_details_table.html' %}
           </div>
-          <div class="row-span-2 bg-gray-800 h-full"></div>
-          <div class="row-span-1 bg-gray-800 h-full rounded-br-lg"></div>
+
+          <!--Order Details Payment-->
+          <div class="row-span-2 flex justify-between items-center bg-gray-800 h-full px-5">
+            <div class="flex justify-center items-center px-5 gap-10">
+              <div class="text-center">
+                <label for="discount" class="block mb-2 text-base font-medium text-gray-900 dark:text-gray-400">Discount</label>
+                <input type="number" aria-describedby="helper-text-explanation" id="discount" 
+                class="border text-sm text-center rounded-lg block w-24 p-2 dark:bg-gray-700 dark:border-gray-600
+                dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder="0 %" required />
+              </div>
+              <div class="text-center">
+                <p class="block mb-2 text-base font-medium text-gray-900 dark:text-gray-400">Total</p>
+                <p class="text-white p-2">0.0 EGP</p>
+              </div>
+            </div>
+
+            <div class="flex justify-center items-center px-5 gap-10">
+              <div class="text-center">
+                <label for="paid" class="block mb-2 text-base font-medium text-gray-900 dark:text-gray-400">Paid</label>
+                <input type="number" aria-describedby="helper-text-explanation" id="paid" 
+                class="border text-sm text-center rounded-lg block w-24 p-2 dark:bg-gray-700 dark:border-gray-600
+                dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder="0.0" required />
+              </div>
+              <div class="text-center">
+                <label for="remaining" class="block mb-2 text-base font-medium text-gray-900 dark:text-gray-400">Remaining</label>
+                <input type="number" aria-describedby="helper-text-explanation" id="remaining" 
+                class="border text-sm text-center rounded-lg block w-24 p-2 dark:bg-gray-700 dark:border-gray-600
+                dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder="0.0" required />
+              </div>
+            </div>
+          </div>
+
+          <!--Order Details buttons-->
+          <div class="row-span-1 flex justify-between items-center bg-gray-800 h-full px-5">
+            <div class="flex justify-center items-center px-5 gap-10">
+              <button 
+                class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
+                font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
+                dark:focus:ring-blue-800 my-3" type="button">
+                OK
+              </button>
+              <button 
+                class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300
+                font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 
+                dark:focus:ring-blue-800 my-3" type="button">
+                OK + Print
+              </button>
+            </div>
+
+            <div class="flex justify-center items-center px-5 gap-10">
+              <button 
+                class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300
+                font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900" type="button">
+                Folder
+              </button>
+              <button 
+                class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100
+                font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
+                dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700" type="button">
+                Clear
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
